k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wisecow
  name: wisecow-service
spec:
  # Use ClusterIP as we will expose the app via an Ingress
  type: ClusterIP
  selector:
    app: wisecow # Selects pods with the label 'app: wisecow'
  ports:
  - protocol: TCP
    port: 80 # The port the service will be available on
    targetPort: 4499 # The port the container is listening on
